--- a/src/app/vistas/sesion/sesion.component.html
+++ b/src/app/vistas/sesion/sesion.component.html
@@ -1,13 +1,9 @@
-
-<div class="card">
-    <div class="card-body">
-        <form>
-            <div class="form-group">
-                <input type="text" class="form-control">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control">
-            </div>
-        </form>
+<div class="row">
+    <div class="col-md-6">
+        <app-login></app-login>
     </div>
+    <div class="col-md-6">
+        <app-register></app-register>
+    </div>
+
 </div>
