--- a/src/app/plantillas/login/login.component.html
+++ b/src/app/plantillas/login/login.component.html
@@ -1,1 +1,20 @@
-<p>login works!</p>
+<h1>Iniciar sesion</h1>
+<div class="card">
+    <div class="card-body">
+        <form (submit)="loginUser(user.value, pass.value)">
+            <div class="form-group mt-3">
+                <label for="user"><b>Nombre de usuario</b></label>
+                <input type="text" class="form-control" #user>
+            </div>
+            <div class="form-group mt-3">
+                <label for="pass"><b>Contraseña</b>
+                </label>
+                <input type="password" class="form-control" #pass>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3">Iniciar sesion</button>
+        </form>
+        <div *ngIf="error" class="alert alert-danger mt-3" role="alert">
+            Usuario o contraseña incorrecta!
+        </div>
+    </div>
+</div>
