--- a/src/app/plantillas/register/register.component.html
+++ b/src/app/plantillas/register/register.component.html
@@ -1,1 +1,17 @@
-<p>register works!</p>
+<h1>Registro</h1>
+<div class="card bg-dark text-white">
+    <div class="card-body">
+        <form (submit)="registerUser(user.value, pass.value)">
+            <div class="form-group mt-3">
+                <label for="user"><b>Nombre de usuario</b></label>
+                <input type="text" class="form-control" #user>
+            </div>
+            <div class="form-group mt-3">
+                <label for="pass"><b>Contraseña</b>
+                </label>
+                <input type="password" class="form-control" #pass>
+            </div>
+            <button type="submit" class="btn btn-warning mt-3">Registrarse</button>
+        </form>
+    </div>
+</div>
