--- a/src/app/plantillas/header/header.component.html
+++ b/src/app/plantillas/header/header.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
     <div class="container-fluid">
         <a [routerLink]="['/home']" class="navbar-brand" >
-            <img src="../../../assets/balon.png" alt="Logo" width="24" height="24" class="d-inline-block align-text-top">
+            <img src="../../../assets/balon.png" width="24" height="24" class="d-inline-block align-text-top">
             <b class="mx-2">PRODE</b>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
